fix(router-link): disable ng transformer, to use router link

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,5 +14,5 @@ dependencies:
 
 transformers:
   - dart_to_js_script_rewriter
-  - angular2:
-      entry_points: web/main.dart
+#  - angular2:
+#      entry_points: web/main.dart
