--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ environment:
   sdk: '>=1.0.0 <2.0.0'
 
 dependencies:
-  angular2: "2.0.0-alpha.33"
+  angular2: "2.0.0-alpha.34"
   browser: '>=0.10.0 <0.11.0'
   dart_to_js_script_rewriter: '^0.1.0'
 
 transformers:
   - dart_to_js_script_rewriter
-#  - angular2:
-#      entry_points: web/main.dart
+  - angular2:
+      entry_points: web/main.dart
